force-app/main/default/objects/Lost_trades__c/Lost_trades__c.object-meta.xml
<CustomObject>
    <label>Lost trade</label>
    <nameField>
        <label>Lost trade counterparty</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lost trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>