force-app/main/default/objects/Lost_trades__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date of opportunity</description>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>