force-app/main/default/objects/Lost_trades__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>TextArea</type>
</CustomField>