force-app/main/default/objects/Lost_trades__c/fields/Total_lost_volume_MT__c.field-meta.xml
<CustomField>
    <fullName>Total_lost_volume_MT__c</fullName>
    <label>Total lost volume (MT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>