force-app/main/default/objects/Lost_trades__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Total_lost_volume_MT__c</columns>
    <columns>Grade__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>